Enable spam reject in haraka

--- a/wildduck/templates/haraka/configmap.yaml
+++ b/wildduck/templates/haraka/configmap.yaml
@@ -861,7 +861,7 @@ data:
     authenticated=true
     private_ip=true
     [reject]
-    spam = false
+    spam = true
     [soft_reject]
     enabled = true
     [rmilter_headers]
