--- a/wildduck/values.yaml
+++ b/wildduck/values.yaml
@@ -49,7 +49,7 @@ wildduck:
     repository: nodemailer/wildduck
     pullPolicy: Always
     # Overrides the image tag whose default is the chart appVersion.
-    tag: ""
+    tag: "1.41.3"
 
   imagePullSecrets: []
   nameOverride: ""
