Fix issue in wildduck deployment.yaml env variable

--- a/wildduck/templates/wildduck/deployment.yaml
+++ b/wildduck/templates/wildduck/deployment.yaml
@@ -33,7 +33,8 @@ spec:
           image: "{{ .Values.wildduck.image.repository }}:{{ .Values.wildduck.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.wildduck.image.pullPolicy }}
           env:
-            - WILDDUCK_CONFIG: /opt/config/default.toml
+            - name: WILDDUCK_CONFIG
+            - value: /opt/config/default.toml
           ports:
             - name: http
               containerPort: {{.Values.wildduck.service.httpPort}}
