--- a/wildduck/values.yaml
+++ b/wildduck/values.yaml
@@ -8,6 +8,7 @@ fullnameOverride: ""
 mailDomain: mail.wildduck.lan
 webMailDomain: wildduck.lan
 
+acmeEmail: user@domain.lan
 extraDomains:
   - mail01.wildduck.lan
   - mail02.wildduck.lan
