Add quotes around acme email

--- a/wildduck/templates/zonemta/configmap.plugins.yaml
+++ b/wildduck/templates/zonemta/configmap.plugins.yaml
@@ -140,7 +140,7 @@ data:
     # Must match with ACME settings in WildDuck
     key = "production"
     directoryUrl = "https://acme-v02.api.letsencrypt.org/directory"
-    email = {{ .Values.acmeEmail }}
+    email = "{{ .Values.acmeEmail }}"
 
     # If hostname has a CAA record set then match it against this list
     # CAA check is done before WildDuck tries to request certificate from ACME
