--- a/wildduck/templates/zonemta/configmap.plugins.yaml
+++ b/wildduck/templates/zonemta/configmap.plugins.yaml
@@ -162,7 +162,7 @@ data:
     #   Additionally, there must be at least 1 email account with "@{domain}" address.
     #   If there is no match, then TLS certificate is not generated.
 
-    smtp = {{ .Values.extaDomains }}
+    smtp = {{ .Values.extraDomains | toYaml | toJson }}
 
     #imap = ["imap.example.com"]
     #smtp = ["smtp.example.com"]
