--- a/wildduck/templates/wildduck/configmap.yaml
+++ b/wildduck/templates/wildduck/configmap.yaml
@@ -112,7 +112,6 @@ data:
     directoryUrl = "https://acme-v02.api.letsencrypt.org/directory"
     email = "{{ .Values.acmeEmail }}"
 
-
     # ACME development settings
     #key = "devel" # variable to identify account settings for specified directory url
     #directoryUrl = "https://acme-staging-v02.api.letsencrypt.org/directory"
@@ -125,6 +124,26 @@ data:
     # Private key settings, if WildDuck has to generate a key by itself
     keyBits = 2048
     keyExponent = 65537
+
+    [autogenerate]
+    # If enabled then automatically generates TLS certificates based on SNI servernames
+    enabled = true
+
+    [autogenerate.cnameMapping]
+    # Sudomain CNAME mapping
+    #   "abc" = ["def.com"] means that if the SNI servername domain is "abc.{domain}"
+    #   then there must be a CNAME record for this domain that points to "def.com".
+    #   If multiple CNAME targets are defined (eg ["def.com", "bef.com"], then at least 1 must match.
+    #   Additionally, there must be at least 1 email account with "@{domain}" address.
+    #   If there is no match, then TLS certificate is not generated.
+ 
+    imap = {{ .Values.extraDomains | toJson }}
+    smtp = {{ .Values.extraDomains | toJson }}
+    pop3 = {{ .Values.extraDomains | toJson }}
+
+    # imap = ["imap.example.com"]
+    # smtp = ["smtp.example.com"]
+    # pop3 = ["imap.example.com"]
 
     [agent]
     # If enabled then starts a HTTP server that listens for ACME verification requests
