--- a/wildduck/templates/rspamd/configmap.yaml
+++ b/wildduck/templates/rspamd/configmap.yaml
@@ -7,7 +7,8 @@ data:
     # Included from top-level .conf file
 
     worker "normal" {
-        bind_socket = "*:{{ .Values.rspamd.service.port }}";
+        bind_socket = "0.0.0.0:{{ .Values.rspamd.service.port }}";
+        bind_socket = "[::1]:{{ .Values.rspamd.service.port }}";
         .include "$CONFDIR/worker-normal.inc"
         .include(try=true; priority=1,duplicate=merge) "$LOCAL_CONFDIR/local.d/worker-normal.inc"
         .include(try=true; priority=10) "$LOCAL_CONFDIR/override.d/worker-normal.inc"
